--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,7 @@
 # Example environment variables for CalenBooker frontend
-REACT_APP_SUPABASE_URL=https://your-project.supabase.co
+REACT_APP_SUPABASE_URL=your-supabase-url-here
 REACT_APP_SUPABASE_ANON_KEY=your-anon-key-here
 REACT_APP_AUTH_REDIRECT=http://localhost:4000/auth/confirm
+# Google reCAPTCHA Site Key (v2 Checkbox) from https://www.google.com/recaptcha/admin/create
+REACT_APP_RECAPTCHA_SITE_KEY=your-recaptcha-site-key-here
+REACT_APP_ENABLE_CAPTCHA=true
