--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,20 +7,20 @@
 
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
 MVP.md
 
 npm-debug.log*
