--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
     "ics": "^3.8.1",
+    "nanoid": "^5.1.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "runes": "^0.4.3",
     "vite": "^6.2.2",
